Delete bug fixes